# novus

./: .gitignore  LICENSE  README.md  doctor.config.json  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.module.css  App.tsx  foliate.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  import.rs  lib.rs  main.rs  storage.rs
src/components/: ConfirmDialog.module.css  ConfirmDialog.tsx  CuratorRail.module.css  CuratorRail.tsx  ErrorBoundary.tsx  Mark.tsx  TitleBar.module.css  TitleBar.tsx  Toast.module.css  Toast.tsx  UpdateBanner.module.css  UpdateBanner.tsx
src/components/About/: AboutPanel.module.css  AboutPanel.tsx
src/components/reader/: DisplaySettings.module.css  DisplaySettings.tsx  HighlightBar.module.css  HighlightBar.tsx  HighlightsPanel.module.css  HighlightsPanel.tsx  Reader.module.css  Reader.tsx  WhyBox.module.css  WhyBox.tsx
src/lib/: assets.ts  changelog.ts  errors.ts  highlightColors.ts  highlightExport.ts  ipc.ts  types.ts  updater.ts  useZoomGuard.ts  version.ts
src/reader/: NovusRenderer.ts  geometry.ts  highlightMarks.ts  openBook.ts  types.ts
src/store/: highlights.ts  library.ts  reader.ts  update.ts
src/styles/: tokens.css
