[package]
name = "novus"
version = "0.2.1"
description = "Novus — a beautiful, performant ebook reader"
authors = ["Novus"]
edition = "2021"

[lib]
name = "novus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
roxmltree = "0.20"
tauri-plugin-process = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", features = ["v2_40"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

